<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sh_gradient">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="184dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivStartAccount"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/ic_login_arrow"
                android:contentDescription="@string/todo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputs_constraint_layout" />

            <ImageView
                android:id="@+id/iv_register_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/ic_main_logo"
                android:contentDescription="@string/todo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inputs_constraint_layout"
                android:layout_width="295dp"
                android:layout_height="173dp"
                android:layout_marginTop="68dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_register_logo">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="77dp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_register_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-1dp"
                        android:alpha="0.64"
                        android:gravity="start"
                        android:lineSpacingMultiplier="1.25"
                        android:text="@string/email_address_login"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="9dp"
                        android:background="@drawable/sh_border"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_register_name" />

                    <EditText
                        android:id="@+id/etLoginEmail"
                        android:layout_width="260dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="24dp"
                        android:background="#00000000"
                        android:gravity="start|center_vertical"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="#19224C"
                        android:textColorHint="#D0D1D5"
                        android:textSize="15sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_register_name"
                        tools:ignore="LabelFor" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="77dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TextView
                        android:id="@+id/tv_register_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-1dp"
                        android:alpha="0.64"
                        android:gravity="start"
                        android:lineSpacingMultiplier="1.25"
                        android:text="@string/hint_password"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="9dp"
                        android:background="@drawable/sh_border"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_register_password" />

                    <EditText
                        android:id="@+id/etLoginPassword"
                        android:layout_width="246dp"
                        android:layout_height="19dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="24dp"
                        android:background="#00000000"
                        android:gravity="start|center_vertical"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_register_password"
                        tools:ignore="LabelFor" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="59dp"
            android:gravity="start"
            android:text="@string/login_sign_in"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLoginRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="59dp"
            android:alpha="0.3"
            android:gravity="start"
            android:text="@string/login_register"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@+id/tvLogin"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="20dp"
            android:layout_height="3dp"
            android:layout_marginStart="40dp"
            android:background="#DFE4EA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>